# nebskill

./: README.md  SKILL.md  main.py  pyproject.toml
agent/: auth.py  llm_agent.py
assets/: mlip_registry.yaml  neb_defaults.yaml
lib/: calculator.py  neb_diagnostics.py
references/: alcf_api.md  mace_off_usage.md  mace_usage.md  neb_method.md  nequip_allegro_usage.md
step0-batch/: INSTRUCTIONS.md  aggregate.py  job_template.sh  queue.py  submit.py
step0-models/: compile.py  download.py  install.py
step0-multi/: runner.py
step1-load/: INSTRUCTIONS.md  download.py  load_dataset.py  load_xyz.py
step2-relax/: INSTRUCTIONS.md  relax_endpoints.py
step3-neb/: INSTRUCTIONS.md  neb_from_images.py  neb_runner.py
step4-monitor/: INSTRUCTIONS.md  diagnostics.py  retry.py
step5-analyze/: INSTRUCTIONS.md  aggregate.py  analyze.py  plot.py  writer.py
