[project]
name = "nebskill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.29.0",
    "globus-sdk>=4.8.1",
    "mace-torch>=0.3.16",
    "matplotlib>=3.11.0",
    "nequip>=0.6.2",
    "numpy>=2.5.0",
    "openai>=2.43.0",
    "scipy>=1.18.0",
    "tace>=0.1.0",
    "upet>=0.2.5",
]
